# master_thesis

./: .gitignore  .gitmodules  Bipartite.ipynb  Correlations.ipynb  DataTable.ipynb  Dockerfile  Experiment_123.ipynb  GTEX_Analyzer.ipynb  GTEX_Creation.ipynb  HTSeq.ipynb  Heaps.ipynb  HighlyVariable.ipynb  LICENSE  Network.ipynb  Network_correlations.ipynb  Pipeline.ipynb  Protein Coding.ipynb  Protein_Coding.ipynb  Readme.md  Sampling.ipynb  TCGA_API.ipynb  TCGA_Files.ipynb  TCGA_GetManifest.ipynb  TCGA_files.py  TableAnalyzer.ipynb  TableMining.ipynb  TableProteinCoding.ipynb  Table_Analyzer.ipynb  Table_Analyzer_R.ipynb  Table_ByGeneType.ipynb  Table_ByTissue.ipynb  Table_Creation.ipynb  Table_Distributions.ipynb  Table_Mining.ipynb  Table_ProteinCoding.ipynb  Table_gtex_Creation.ipynb  Table_merging.ipynb  Table_microRNA.ipynb  Table_tfidf.ipynb  Untitled.ipynb  (+34 more)
data_mining/: BioParameters.h  CMakeLists.txt  GraphGenerator.cxx  GraphGenerator.h  GraphGenerator_Python.cxx  LabelsReshuffler.cxx  LabelsReshuffler.h  MainTable.cxx  MainTable.h  NullModel.cxx  NullModel.h  RandomGen.cxx  RandomGen.h  SamplingModel.cxx  TelegramWatch.cxx  TopicTree.cxx  main.cpp
data_mining/python/: CMakeLists.txt  GraphGenerator_Python.cxx  hSBM_analyser.h
docker/: Correlations.ipynb  Dockerfile  Experiment_123.ipynb  Heaps.ipynb  Network_correlations.ipynb  Pipeline.ipynb  Sampling.ipynb  TCGA_API.ipynb  TCGA_GetManifest.ipynb  Table_Analyzer.ipynb  Table_ByGeneType.ipynb  Table_ByTissue.ipynb  Table_Creation.ipynb  Table_Distributions.ipynb  Table_Mining.ipynb  Table_ProteinCoding.ipynb  Table_merging.ipynb  Table_microRNA.ipynb  Table_tfidf.ipynb  Zipf.ipynb  alternative_clustering.ipynb  docker-compose.yml  environment.yml  gene_symbol.txt  geneontology.py  genes.txt  hSBM_clusters.ipynb  hSBM_clusters_R.ipynb  hSBM_topic-dist.ipynb  hSBM_topics.ipynb  hsbmpy.py  pipeline.py  purge.sh  tableanalyser.py  tacos_plot.py
graph/: events.out.tfevents.1564849071.MacBook.local  events.out.tfevents.1564849597.MacBook.local  events.out.tfevents.1564850653.MacBook.local  events.out.tfevents.1564850731.MacBook.local  events.out.tfevents.1564850827.MacBook.local  events.out.tfevents.1564850944.MacBook.local  events.out.tfevents.1564850963.MacBook.local  events.out.tfevents.1564851261.MacBook.local  (+83 more)
hSBM/: run.py  (+6 more)
(+44 files in other folders)
